<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_genre"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.music_onthego.genre">

    <ScrollView
        android:layout_marginBottom="72dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFF176"
                android:padding="8dp"
                android:text="@string/genreDescription" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/Songs"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_bg"
                    android:backgroundTint="#90A4AE"
                    android:gravity="center"
                    android:text="@string/genre1" />

                <TextView
                    style="@style/Songs"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_bg"
                    android:backgroundTint="#90A4AE"
                    android:gravity="center"
                    android:text="@string/genre2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/Songs"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_bg"
                    android:backgroundTint="#90A4AE"
                    android:gravity="center"
                    android:text="@string/genre3" />

                <TextView
                    style="@style/Songs"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_bg"
                    android:backgroundTint="#90A4AE"
                    android:gravity="center"
                    android:text="@string/genre4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/Songs"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_bg"
                    android:backgroundTint="#90A4AE"
                    android:gravity="center"
                    android:text="@string/genre5" />

                <TextView
                    style="@style/Songs"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_bg"
                    android:backgroundTint="#90A4AE"
                    android:gravity="center"
                    android:text="@string/genre6" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/Songs"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_bg"
                    android:backgroundTint="#90A4AE"
                    android:gravity="center"
                    android:text="@string/genre7" />

                <TextView
                    style="@style/Songs"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_bg"
                    android:backgroundTint="#90A4AE"
                    android:gravity="center"
                    android:text="@string/genre8" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/Songs"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_bg"
                    android:backgroundTint="#90A4AE"
                    android:gravity="center"
                    android:text="@string/genre9" />

                <TextView
                    style="@style/Songs"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_bg"
                    android:backgroundTint="#90A4AE"
                    android:gravity="center"
                    android:text="@string/genre10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/Songs"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_bg"
                    android:backgroundTint="#90A4AE"
                    android:gravity="center"
                    android:text="@string/genre11" />

                <TextView
                    style="@style/Songs"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_bg"
                    android:backgroundTint="#90A4AE"
                    android:gravity="center"
                    android:text="@string/genre12" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/Songs"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_bg"
                    android:backgroundTint="#90A4AE"
                    android:gravity="center"
                    android:text="@string/genre13" />

                <TextView
                    style="@style/Songs"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_bg"
                    android:backgroundTint="#90A4AE"
                    android:gravity="center"
                    android:text="@string/genre14" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:orientation="horizontal"
        android:padding="16dp">


        <TextView
            android:id="@+id/songName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:text="@string/song"
            android:textColor="#FFFFFF" />


        <ImageView
            android:id="@+id/rewind"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/fastrewind" />

        <Button
            android:id="@+id/play"
            android:layout_width="40dp"
            android:layout_height="40dp" />

        <ImageView
            android:id="@+id/forward"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/fastforward" />


    </LinearLayout>


</RelativeLayout>
